5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1638_2728.log
== TEST (2019-04-08 17:52:19) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")
A = perc/8
B = perc/12
print(A)
-- OUTPUT:
8.125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:54:46) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")

if(tipo.upper()==A):
	A = perc/8
	print(A)
if(tipo.upper()==B):
	B = perc/12
	print(B)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(tipo.upper()==A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:55:12) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")

if(tipo.upper()=A):
	A = perc/8
	print(A)
if(tipo.upper()=B):
	B = perc/12
	print(B)
-- ERROR:
File "XXXX", line 4
    if(tipo.upper()=A):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:55:48) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")
A = perc/8
B = perc/12

if(tipo.upper()==A):
	print(A)
if(tipo.upper()==B):
	print(B)
-- ERROR:
File "XXXX", line 4
    if(tipo.upper()=A):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:56:22) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")

if(tipo.upper()=="A"):
	A = perc/8
	print(A)
if(tipo.upper()=="B"):
	B = perc/12
	print(B)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:56:37) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")

if(tipo.upper()=="A"):
	A = perc/8
	print(A)
if(tipo.upper()=="B"):
	B = perc/12
	print(B)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:57:08) 
-- CODE:
perc = float(input("percuso em km:"))
tipo = input("Tipo do carro:")

if(tipo.upper()=="A"):
	A = perc/8
	print(round(A, 2))
if(tipo.upper()=="B"):
	B = perc/12
	print(round(B, 2))
-- EXECUTION TIME:
0.151381
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
